
    syntax = "proto3";
option go_package = ".;protos";


message BuildDirectoryOutput{
  // check BuildDirectory
  bool used = 1;
  // list of all BuildDirectory
  repeated BuildDirectory BuildDirectory = 2;
}
message BuildDirectory{
  //  name of Dir
  string name = 1;
  //  version of root
  string root = 2;

}

