syntax = "proto3";
option go_package = "./protos/outputs/languageSpecific";

message LibrariesOutput{
  // list of all library
  map<string, LibraryDetails> libraryDetails = 1;
}
message LibraryDetails{
  //  name of library
  string version = 1;
  //  type of library
  enum Type {
    REPLACED = 0;
    EXTERNAL = 1;
  }
  Type type = 2;
}

